--- a/Api/Cheers/Cheers.Service/Cheers.Service.csproj
+++ b/Api/Cheers/Cheers.Service/Cheers.Service.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="4.0.0.5" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
     <PackageReference Include="Tesseract" Version="5.2.0" />
   </ItemGroup>
