--- a/Api/Cheers/Cheers.Api/Cheers.Api.csproj
+++ b/Api/Cheers/Cheers.Api/Cheers.Api.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>75b0b5c8-333c-46b8-9065-cd54db919ae6</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
